cache foreign content in win32 clipboard code (tdf#133267)

The slowness in tdf#133267 on Windows is because the Calc operation
repeatedly calls ScDocument::IsClipboardSource(), which calls
ScModule::GetClipDoc(), which proceeds to fetch the clipboard
content, which means fetching it from the system clipboard if it's
not owned by LO.
Other LO clipboard implementations such as gtk3 or qt5 already
do caching, and it seems that it's easy to do for the win32 code.

Change-Id: I4696cc7488d66803fd5dd2963d27900957decdec
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95163
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
(cherry picked from commit fda6ad1458fcd5087c3dde56300b9d0367af6db5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95246
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 9b311cabd908c6bc9e7f7d461ee11eaf0ea6b18c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95749
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit bb96d35f4dbe8b3f13e9a67f76ddcd95fa27ad57)