vcl/win/dtrans/WinClipbImpl.cxx
@@ -86,6 +86,10 @@ Reference< XTransferable > SAL_CALL CWinClipbImpl::getContents( )
             return m_pCurrentClipContent->m_XTransferable;
         }
 
+        // Content cached?
+        if (m_foreignContent.is())
+            return m_foreignContent;
+
         // release the mutex, so that the variable may be
         // changed by other threads
     }
@@ -104,6 +108,9 @@ Reference< XTransferable > SAL_CALL CWinClipbImpl::getContents( )
 
         // remember pIDo destroys itself due to the smart pointer
         rClipContent = CDOTransferable::create( m_pWinClipboard->m_xContext, pIDo );
+
+        MutexGuard aGuard(m_ClipContentMutex);
+        m_foreignContent = rClipContent;
     }
 
     return rClipContent;
@@ -119,6 +126,8 @@ void SAL_CALL CWinClipbImpl::setContents(
     {
         {
             MutexGuard aGuard(m_ClipContentMutex);
+
+            m_foreignContent.clear();
 
             m_pCurrentClipContent
                 = new CXNotifyingDataObject(CDTransObjFactory::createDataObjFromTransferable(
@@ -179,7 +188,10 @@ void WINAPI CWinClipbImpl::onClipboardContentChanged()
 
     // reassociation to instance through static member
     if ( nullptr != s_pCWinClipbImpl )
+    {
+        s_pCWinClipbImpl->m_foreignContent.clear();
         s_pCWinClipbImpl->m_pWinClipboard->notifyAllClipboardListener( );
+    }
 }
 
 void SAL_CALL CWinClipbImpl::onReleaseDataObject( CXNotifyingDataObject* theCaller )
